Fix layout bugs in GigIndex

--- a/frontend-react/src/assets/styles/cmps/FilterBar.scss
+++ b/frontend-react/src/assets/styles/cmps/FilterBar.scss
@@ -79,7 +79,8 @@
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
-    height: 2.5em
+    height: 2.5em;
+    grid-row: 2;
 }
 
 .filter-chip {
