--- a/frontend-react/src/assets/styles/cmps/GigList.scss
+++ b/frontend-react/src/assets/styles/cmps/GigList.scss
@@ -1,17 +1,21 @@
+.gig-list-container {
+    grid-column: 2;
+    grid-row: 2;
+    margin-block-start: 3rem;
+}
+    // li {
+    //     display: grid;
+    //     grid-template-columns: max-content auto;
+    //     padding: .5em;
+    //     background-color: $clr2;
 
-    li {
-        display: grid;
-        grid-template-columns: max-content auto;
-        padding: .5em;
-        background-color: $clr2;
+    //     color: $clr6;
 
-        color: $clr6;
+    //     .actions {
+    //         justify-self: end;
 
-        .actions {
-            justify-self: end;
-
-            button {
-                padding: .3em .5em;
-            }
-        }
-    }
+    //         button {
+    //             padding: .3em .5em;
+    //         }
+    //     }
+    // }
