--- a/frontend-react/src/assets/styles/pages/GigIndex.scss
+++ b/frontend-react/src/assets/styles/pages/GigIndex.scss
@@ -1,4 +1,5 @@
 .gig-index {
+    grid-template-rows: min-content;
     header {
         display: flex;
         align-items: center;
